src/objects/nJob_Applied__c.object
<CustomObject>
    <fields>
        <fullName>Candidates__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Candidate</label>
        <referenceTo>nCandidate__c</referenceTo>
        <relationshipName>Job_Applieds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>position__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>position</label>
        <referenceTo>nposition__c</referenceTo>
        <relationshipName>Job_Applieds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>status</label>
        <picklist>
            <picklistValues>
                <fullName>fresher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>exp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>teamlead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>proj lead</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>nJob Applied</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>j-{000}</displayFormat>
        <label>nJob Applied id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>nJob Applieds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>